issue fixded section&header overlap

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ header {
     width: 100%;
     height: fit-content;
     background-color: #503D3F;
+    padding-top: 135px;
   }
 /* Header Ends */
 
